deploy/base/strapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-server
  labels:
    app: strapi-server
spec:
  selector:
    matchLabels:
      app: strapi-server
  template:
    metadata:
      labels:
        app: strapi-server
    spec:
      containers:
        - name: strapi-server
          resources:
            requests:
              cpu: 100m
              memory: 200M
            limits:
              cpu: 800m
              memory: 1Gi
          image: strapi-server
