deploy/base/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-server
spec:
  selector:
    app: front-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
