deploy/base/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mantis.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-server
                port:
                  number: 80
