deploy/base/strapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mantis.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: strapi-server
                port:
                  number: 1337
